--- a/codes/day_39_hello_hyper/Cargo.toml
+++ b/codes/day_39_hello_hyper/Cargo.toml
@@ -6,4 +6,5 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-hyper = "0.14.20"
+hyper = { version = "0.14.20", features = ["full"] }
+tokio = { version = "1", features = ["full"] }
