--- a/codes/day_53_wasm-worker-log/Cargo.toml
+++ b/codes/day_53_wasm-worker-log/Cargo.toml
@@ -6,3 +6,5 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+anyhow = "1.0.65"
+wasm-workers-rs = { git = "https://github.com/vmware-labs/wasm-workers-server/" }
