Modify access path

--- a/codes/day_57_spin-getting-started/hello-spin-rust/spin.toml
+++ b/codes/day_57_spin-getting-started/hello-spin-rust/spin.toml
@@ -9,6 +9,6 @@ version = "0.1.0"
 id = "hello-spin-rust"
 source = "target/wasm32-wasi/release/hello_spin_rust.wasm"
 [component.trigger]
-route = "/..."
+route = "/hello"
 [component.build]
 command = "cargo build --target wasm32-wasi --release"
