--- a/codes/day_70_cargo-edit/Cargo.toml
+++ b/codes/day_70_cargo-edit/Cargo.toml
@@ -3,7 +3,5 @@ name = "day_70_cargo-edit"
 version = "0.1.0"
 edition = "2021"
 
-# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
-
 [dependencies]
-regex = { version = "1.6.0", features = ["unicode"] }
+regex = "1.7.0"
