--- a/codes/day_74_time/Cargo.toml
+++ b/codes/day_74_time/Cargo.toml
@@ -3,6 +3,5 @@ name = "day_74_time"
 version = "0.1.0"
 edition = "2021"
 
-# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
-
 [dependencies]
+time = { version = "0.3.17", features = ["macros"] }
