--- a/codes/day_74_time/Cargo.toml
+++ b/codes/day_74_time/Cargo.toml
@@ -4,4 +4,4 @@ version = "0.1.0"
 edition = "2021"
 
 [dependencies]
-time = { version = "0.3.17", features = ["macros"] }
+time = { version = "0.3.17", features = ["macros", "local-offset"] }
