--- a/codes/day_93_todoRepository/Cargo.toml
+++ b/codes/day_93_todoRepository/Cargo.toml
@@ -8,6 +8,7 @@ edition = "2021"
 [dependencies]
 anyhow = "1.0.68"
 axum = "0.6.1"
+http-body = "0.4.5"
 hyper = { version = "0.14.23", features = ["full"] }
 mime = "0.3.16"
 serde = { version = "1.0.151", features = ["derive"] }
