--- a/codes/day_93_todoRepository/Cargo.toml
+++ b/codes/day_93_todoRepository/Cargo.toml
@@ -18,3 +18,4 @@ tokio = { version = "1.23.0", features = ["full"] }
 tower = "0.4.13"
 tracing = "0.1.37"
 tracing-subscriber = { version = "0.3.16", features = ["env-filter"] }
+validator = { version = "0.16.0", features = ["derive"] }
