--- a/codes/day_96_todoAppSQL/Cargo.toml
+++ b/codes/day_96_todoAppSQL/Cargo.toml
@@ -14,7 +14,7 @@ hyper = { version = "0.14.23", features = ["full"] }
 mime = "0.3.16"
 serde = { version = "1.0.151", features = ["derive"] }
 serde_json = "1.0.91"
-sqlx = { version = "0.6.2", features = ["runtime-tokio-rustls"] }
+sqlx = { version = "0.6.2", features = ["runtime-tokio-rustls", "postgres", "any"] }
 thiserror = "1.0.38"
 tokio = { version = "1.23.0", features = ["full"] }
 tower = "0.4.13"
